nouveaux logo et titre

--- a/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
+++ b/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
@@ -111,7 +111,7 @@ You can start editing the page by modifying `pages/index.js`. The page auto-upda
 
 `data/headerNavLinks.js` - navigation links.
 
-`data/logo.svg` - replace with your own logo.
+`data/logoArt.svg` - replace with your own logo.
 
 `data/blog` - replace with your own blog posts.
 
