--- a/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
+++ b/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
@@ -113,6 +113,8 @@ You can start editing the page by modifying `pages/index.js`. The page auto-upda
 
 `data/logoArt.svg` - replace with your own logo.
 
+`data/logoArtBlack.svg` - replace with your own black logo.
+
 `data/blog` - replace with your own blog posts.
 
 `public/static` - store assets such as images and favicons.
